--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "@ngrx/store": "^12.1.0",
+    "@ngrx/store-devtools": "^12.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -37,6 +39,7 @@
     "typescript": "~4.3.2"
   },
   "volta": {
-    "node": "14.17.1"
+    "node": "14.17.1",
+    "npm": "7.19.0"
   }
 }
