Implemented the API for the Playlists Feature

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "angular.ng-template",
     "editorconfig.editorconfig",
     "dbaeumer.vscode-eslint",
-    "johnpapa.vscode-peacock"
+    "johnpapa.vscode-peacock",
+    "humao.rest-client"
   ]
 }
